style(cell-containers-list): change position to fixed and update overflow property for layout consistency

--- a/src/renderer/src/css/main-imports-this-css/cells/cell-containers-list.css
+++ b/src/renderer/src/css/main-imports-this-css/cells/cell-containers-list.css
@@ -3,14 +3,14 @@
 /* The list is the ONLY outer scroller */
 .cell-containers-list {
   box-sizing: border-box;
-  position: absolute; 
+  position: fixed; 
   /*position: relative;*/ 
-  display: flex; 
+  display: absolute; 
   flex-direction: column;
   min-height:0; 
   width:100%;
 
-  overflow-y: scroll; /* sole column scroller */
+  overflow-y: visible; /* sole column scroller */
 
   gap: 0;
   padding-right: 5em;
