--- a/src/renderer/src/css/main-imports-this-css/workspace/workspace-web-layout-container.css
+++ b/src/renderer/src/css/main-imports-this-css/workspace/workspace-web-layout-container.css
@@ -5,13 +5,13 @@ The workspace web layout container that holds both the cell list and the side pa
 .workspace-web-layout-container {
     z-index: var(--workspace-web-layout-container-z-index, 1000);
     display: flex;
-    position: relative;
+    position: absolute;
     flex-direction: row;
     width:100%;
     height:100%;
     min-height:0; /* allow inner flex child to shrink/scroll */
     /*overflow-y: auto;*/
-    overflow: scroll;  /* no outer scroll, only inner cell list scroll */
+    overflow: hidden;  /* no outer scroll, only inner cell list scroll */
     background: var(--web-workspace-background, var(--debug-color));
     border: 20px solid olive; /* debug */
     box-sizing: border-box;
